--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutterflix">
-   <application
-        android:label="flutterflix"
-        android:icon="@mipmap/ic_launcher">
+    package="com.nulligma.flutterflix">
+
+   <uses-permission android:name="android.permission.INTERNET"/>
+   
+   <application 
+        android:label="SuperFlix"
+        android:icon="@mipmap/launcher_icon"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
